--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,23 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+button{
+  user-select: none;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: white;
+  height:50px;
+  width: 90%;
+  font-family: monospace
+}
+button:hover{
+  box-shadow:0px 1px 0px gray;
+}
+.menuItems{
+  height:50%;
+  margin-top:50px;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
