CREATE skeleton for exercise page & simplify Navbar component.

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,9 @@ button:hover{
 .loginFormPage{
   background-image: url("./idiomBackground2.png");
 }
+.exercisePage{
+  background-image: url("./idiomBackground2.png");
+}
 /*////////////////////////////////////////////////////////////*/
 /*Login component*/
 input:focus{
