--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.container{
+  display:flex;
+  justify-content:flex-start;
+
+}
 /*----------------- LINKS  ----------------------------------*/
 .btnLink{
   user-select: none;
@@ -45,6 +50,14 @@ button{
 }
 button:hover{
   box-shadow:0px 1px 0px gray;
+}
+.buttonBox{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width:300px;
+  margin:2%;
 }
 .menuItems{
   height:50%;
@@ -128,4 +141,32 @@ input:invalid{
 #loginInputContainer > button:hover{
   box-shadow:-10px 5px 2px midnightblue;
   background-color: #cbe1f6;
+}
+
+/*------------------ EXERCISES-------------------------*/
+.exerciseContainer{
+  margin:2%;
+  width:100%;
+}
+.vocabCardsActivityDisplay{
+  border: 1px solid black;
+  background-color: whitesmoke;
+  margin-top: 20px;
+  height:350px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.card{
+  border: 1px solid gray;
+  box-shadow: -10px 10px 5px lightsteelblue;
+  background-color: white;
+  height:275px;
+  width:450px;
+  margin-top: 35px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  transition:transform 0.8s;
 }
