--- a/src/index.css
+++ b/src/index.css
@@ -152,7 +152,7 @@ input:invalid{
   border: 1px solid black;
   background-color: whitesmoke;
   margin-top: 20px;
-  height:350px;
+  min-height:350px;
   display:flex;
   flex-direction: column;
   justify-content: center;
@@ -162,7 +162,7 @@ input:invalid{
   border: 1px solid gray;
   box-shadow: -10px 10px 5px lightsteelblue;
   background-color: white;
-  height:275px;
+  min-height:275px;
   width:450px;
   margin-top: 35px;
   display:flex;
