--- a/src/index.css
+++ b/src/index.css
@@ -150,11 +150,22 @@ input:invalid{
 }
 .vocabCardsActivityDisplay{
   border: 1px solid black;
-  background-color: whitesmoke;
+  background-color:rgba(255, 192, 203, 0.938);
   margin-top: 20px;
   min-height:350px;
   display:flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.vocabCardsActivityDisplayROW{
+  border: 1px solid black;
+  background-color:rgba(255, 192, 203, 0.938);
+  margin-top: 20px;
+  min-height:350px;
+  display:flex;
+  flex-direction: row;
+  flex-wrap:wrap;
   justify-content: center;
   align-items: center;
 }
@@ -163,10 +174,32 @@ input:invalid{
   box-shadow: -10px 10px 5px lightsteelblue;
   background-color: white;
   min-height:275px;
-  width:450px;
-  margin-top: 35px;
+  width:30%;
+  margin:2%;
   display:flex;
   justify-content: center;
   align-items: center;
   transition:transform 0.8s;
+}
+.smallCard{
+  border: 1px solid gray;
+  box-shadow: -5px 5px 10px lightsteelblue;
+  background-color: white;
+  height:10rem;
+  width:12rem;
+  margin:2%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  transition:transform 0.8s;
+}
+.exerciseInput{
+  width: 30%;
+  height:50px;
+  margin-top:5%;
+  border-top:none;
+  border-left:none;
+  border-right:none;
+  border-bottom:1px solid black;
+  font-size:xx-large;
 }
