--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
 .container{
   display:flex;
   justify-content:flex-start;
+  width:100%;
 
 }
 /*----------------- LINKS  ----------------------------------*/
@@ -144,25 +145,29 @@ input:invalid{
 }
 
 /*------------------ EXERCISES-------------------------*/
-.exerciseContainer{
+/*.exerciseContainer{
+  background-color:red;
   margin:2%;
   width:100%;
 }
-.vocabCardsActivityDisplay{
+*/
+.display{
   border: 1px solid black;
   background-color:rgba(255, 192, 203, 0.938);
-  margin-top: 20px;
+  margin:2%;
   min-height:350px;
+  width:100%;
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.vocabCardsActivityDisplayROW{
+.displayROW{
   border: 1px solid black;
   background-color:rgba(255, 192, 203, 0.938);
-  margin-top: 20px;
+  margin: 2%;
   min-height:350px;
+  width:100%;
   display:flex;
   flex-direction: row;
   flex-wrap:wrap;
@@ -208,4 +213,31 @@ input:invalid{
 }
 .CardColumn>*{
   margin:15%;
+}
+
+/*-----------------------  FOLDERS ----------------------*/
+.folder{
+  height:100px;
+  width:150px;
+  margin:2%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.folderTop{
+  background-color: #c34545;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 5px;
+  height:25px;
+  padding:2%;
+  text-align:right;
+  font-family: monospace;
+  color:white;
+}
+.folderBottom{
+  background-color: #d77676;
+  border-bottom-right-radius:5px;
+  border-bottom-left-radius:5px;
+  box-shadow: 5px -5px 0px white;
+  height:80px;
 }
