--- a/src/index.css
+++ b/src/index.css
@@ -145,12 +145,6 @@ input:invalid{
 }
 
 /*------------------ EXERCISES-------------------------*/
-/*.exerciseContainer{
-  background-color:red;
-  margin:2%;
-  width:100%;
-}
-*/
 .display{
   border: 1px solid black;
   background-color:rgba(255, 192, 203, 0.938);
@@ -170,7 +164,7 @@ input:invalid{
   width:100%;
   display:flex;
   flex-direction: row;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
@@ -219,10 +213,13 @@ input:invalid{
 .folder{
   height:100px;
   width:150px;
-  margin:2%;
+  margin:3%;
   display:flex;
   flex-direction: column;
   justify-content: space-between;
+}
+.folder:hover{
+  box-shadow: 3px 3px 10px white;
 }
 .folderTop{
   background-color: #c34545;
@@ -240,4 +237,24 @@ input:invalid{
   border-bottom-left-radius:5px;
   box-shadow: 5px -5px 0px white;
   height:80px;
+}
+/*-------------------------  SETS  ---------------------*/
+.set{
+  height:80px;
+  width:300px;
+  margin:3%;
+  border-radius: 15px;
+  background-color: #6041f496;
+  box-shadow: -10px 15px 0px darkslateblue;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color:whitesmoke;
+  font-size: X-large;
+
+}
+.infoBox{
+  height:35px;
+  width: 250px;
 }
