--- a/src/index.css
+++ b/src/index.css
@@ -254,6 +254,9 @@ input:invalid{
   font-size: X-large;
 
 }
+.set:hover{
+  box-shadow: -10px 15px 0px rgb(199, 196, 218);
+}
 .infoBox{
   height:35px;
   width: 250px;
