--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
 .container{
   display:flex;
   justify-content:flex-start;
+  height:100vh;
   width:100%;
 }
 /*----------------- LINKS  ----------------------------------*/
