Create flipping animation on FlipExercise cards.

--- a/src/index.css
+++ b/src/index.css
@@ -187,6 +187,10 @@ input:invalid{
   align-items: center;
   transition:transform 0.8s;
 }
+/*.flip properties being applied directly in JS function in FlipExercise Component*/
+.flip{
+  transform: perspective(500px) rotateX(360deg);
+}
 .exerciseInput{
   width: 45%;
   height:50px;
