--- a/src/index.css
+++ b/src/index.css
@@ -47,23 +47,43 @@ body {
 	flex-direction: column;
 	background-color: #c6d2e3;
 }
-button{
+.exerciseButton{
   user-select: none;
   border-radius: 20px;
   border: 1px solid white;
   background-color: white;
   height:50px;
-  width: 90%;
+  width:90%;
   margin:2%;
   font-size: 1rem;
   font-family:'Courier New', Courier, monospace;
 }
+.menuButton{
+  user-select: none;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: white;
+  height:25%;
+  width:75%;
+  padding:3%;
+}
+.toolbarButton{
+  user-select: none;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: white;
+  margin:2%;
+  font-size: 2rem;
+  font-family:'Courier New', Courier, monospace;
+}
+
 button:hover{
-  box-shadow:0px 1px 0px gray;
+  box-shadow:0px 2px 0px rgb(0, 0, 0);
+  background-color: rgb(253, 240, 248);
 }
 .menuItems{
-  height:50%;
-  margin-top:50px;
+  height:75%;
+  margin-top:5%;
   display:flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -226,10 +246,20 @@ input:invalid{
 }
 /* ////////////////// HOMEPage components////////*/
 .toolbar{
+  border:2px solid black;
   display:flex;
+  align-items: center;
   flex-direction:row;
-  width:90%;
-  padding:1%;
+  flex-wrap:wrap;
+  height:10rem;
+  width:100%;
+}
+#label_list{
+  display:flex;
+  flex-direction: column;
+}
+#label_list>*{
+  margin:5%;
 }
 /*-----------------------  FOLDERS ----------------------*/
 .folder{
