--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
 .container{
   display:flex;
   justify-content:flex-start;
+  height:100vh;
   width:100%;
 }
 /*----------------- LINKS  ----------------------------------*/
@@ -40,11 +41,11 @@ body {
 /*------------------------ Buttons  Menu ------------------------------------------------*/
 .menu {
 	border-radius: 20px;
-	height: 100vh;
-	width: 10%;
+	height: 5rem;
+	width: 90%;
 	margin: 1%;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	background-color: #c6d2e3;
 }
 .exerciseButton{
@@ -63,9 +64,9 @@ body {
   border-radius: 20px;
   border: 1px solid white;
   background-color: white;
-  height:25%;
-  width:75%;
-  padding:3%;
+  height:50%;
+  width:20%;
+  padding:1%;
 }
 .toolbarButton{
   user-select: none;
@@ -82,15 +83,14 @@ button:hover{
   background-color: rgb(253, 240, 248);
 }
 .menuItems{
-  height:75%;
-  margin-top:5%;
+  width:50%;
   display:flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
 .menuItems>*{
-  margin:20%;
+  margin:2%;
 }
 /* ------------------------------LOGOS  -----------------------------------*/
 .smLogo{
