--- a/src/index.css
+++ b/src/index.css
@@ -246,7 +246,7 @@ input:invalid{
 }
 /* ////////////////// HOMEPage components////////*/
 .toolbar{
-  border:2px solid black;
+  background-color:rgba(140, 168, 191, 0.87);
   display:flex;
   align-items: center;
   flex-direction:row;
