--- a/src/index.css
+++ b/src/index.css
@@ -246,13 +246,12 @@ input:invalid{
 }
 /* ////////////////// HOMEPage components////////*/
 .toolbar{
-  background-color:rgba(140, 168, 191, 0.87);
   display:flex;
   align-items: center;
+  justify-content: space-between;
   flex-direction:row;
   flex-wrap:wrap;
-  height:10rem;
-  width:100%;
+  width:50%;
 }
 #label_list{
   display:flex;
