--- a/src/index.css
+++ b/src/index.css
@@ -253,6 +253,20 @@ input:invalid{
   flex-wrap:wrap;
   width:50%;
 }
+.toolbarButtonContainer{
+  display:flex;
+  justify-content: flex-end;
+  align-items: center;
+  height:100%;
+  width:50%;
+}
+.toolbarButtonContainer>*{
+  border:none;
+  margin:3%;
+  padding:1%;
+  width:35%;
+  background-color: #7b93b4;
+}
 #label_list{
   display:flex;
   flex-direction: column;
