--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   background-color: #cbe1f6;
 }
 .link{
-  margin:2%;
+  margin:5%;
   text-decoration:none;
   color: black;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -38,7 +38,6 @@ body {
 /*------------------------ Buttons  Menu ------------------------------------------------*/
 .menu {
 	border-radius: 20px;
-	height: 5rem;
 	width: 90%;
 	margin: 1%;
 	display: flex;
@@ -75,7 +74,14 @@ body {
   font-size: 2rem;
   font-family:'Courier New', Courier, monospace;
 }
-
+.exerciseLinkBtn{
+  user-select: none;
+  text-decoration:none;
+  border-radius:15px;
+  color:black;
+  text-align:center;
+  background-color:#4b2fa1;
+}
 button:hover{
   box-shadow:0px 2px 0px rgb(0, 0, 0);
   background-color: rgb(253, 240, 248);
@@ -251,32 +257,28 @@ input:invalid{
 .toolbar{
   display:flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content:space-evenly;
   flex-direction:row;
-  flex-wrap:wrap;
+  flex-wrap:nowrap;
   width:50%;
 }
 .toolbarButtonContainer{
   display:flex;
-  justify-content: flex-end;
   align-items: center;
   height:100%;
-  width:50%;
 }
 .toolbarButtonContainer>*{
-  border:none;
   margin:3%;
   padding:1%;
-  width:35%;
   background-color: #7b93b4;
 }
 #label_list{
+  border:1px solid black;
   border-radius:5px;
-  background-color:rgb(252, 253, 154);
+  background-color:rgb(247, 193, 252);
   display:flex;
   flex-direction: column;
   align-items:flex-start;
-  width:20%;
   padding:1%;
 }
 #label_list>*{
@@ -333,4 +335,27 @@ input:invalid{
 .infoBox{
   height:35px;
   width: 250px;
+}
+
+/* ---------- MEDIA QUERIES -----------*/
+/* for screens smaller than 600px         */
+@media screen and (max-width:600px){
+  .menu{
+    flex-direction:column;
+
+  }
+  .menuItems{
+    width:100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .menuItems>*{
+    height:3rem;
+  }
+  .toolbar{
+    flex-direction:column;
+    width:100%;
+  }
 }
