--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .pushContainer{
   height:100vh;
 }
@@ -80,7 +81,7 @@ body {
   border-radius:15px;
   color:black;
   text-align:center;
-  background-color:#4b2fa1;
+  background-color: white;
 }
 button:hover{
   box-shadow:0px 2px 0px rgb(0, 0, 0);
@@ -111,7 +112,24 @@ button:hover{
   flex-direction: column;
   justify-content: flex-end;
   height:100vh;
-  margin: 0%;
+}
+.LandingPageMainContainer {
+  display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+.LandingPageLargeLogo {
+	background-color: #22187e;
+	color: white;
+	display: flex;
+	height: 75%;
+  width:90%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-size:x-large;
 }
 .homePage{
   background-image: url("./Images/idiomBackground2.png");
@@ -151,7 +169,8 @@ input:invalid{
   border-radius: 20px;
   box-shadow: -10px 10px 0px #31054c;
   height:400px;
-  width: 30%;
+  width: 45%;
+  margin:5%;
   display:flex;
   flex-direction: column;
   justify-content: center;
@@ -166,7 +185,7 @@ input:invalid{
 }
 .loginInput{
   height:40px;
-  width:20rem;
+  width:90%;
   border-radius: 10px;
   border:none;
   font-size: large;
@@ -270,12 +289,11 @@ input:invalid{
 .toolbarButtonContainer>*{
   margin:3%;
   padding:1%;
-  background-color: #7b93b4;
 }
 #label_list{
-  border:1px solid black;
   border-radius:5px;
-  background-color:rgb(247, 193, 252);
+  background-color: rgb(123 147 180);
+  color: #10066e;
   display:flex;
   flex-direction: column;
   align-items:flex-start;
@@ -342,6 +360,7 @@ input:invalid{
 @media screen and (max-width:600px){
   .menu{
     flex-direction:column;
+    margin-top:5%;
 
   }
   .menuItems{
@@ -357,5 +376,28 @@ input:invalid{
   .toolbar{
     flex-direction:column;
     width:100%;
+  }
+  /*LANIDNG PAGE ON MOBILE*/
+  .LandingPageMainContainer{
+    display:flex;
+    flex-direction: column-reverse;
+  }
+  #loginContainer{
+    width:75%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .LandingPageLargeLogo{
+    display:none;
+  }
+  /*Exercise display*/
+  .display{
+    height:30rem;
+    margin-top: 10%;
+  }
+  .card{
+    width:90%;
   }
 }
