--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,7 @@ button:hover{
 	justify-content: space-evenly;
 	align-items: center;
 	width: 100%;
-	height: 100%;
+	height: 75%;
 }
 .LandingPageLargeLogo {
   border:2px solid white;
@@ -375,10 +375,10 @@ input:invalid{
   /*LANIDNG PAGE ON MOBILE*/
   .LandingPageMainContainer{
     display:flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
   #loginContainer{
-    width:75%;
+    width:65%;
     display:flex;
     flex-direction: column;
     justify-content: center;
