--- a/src/index.css
+++ b/src/index.css
@@ -7,396 +7,454 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.pushContainer{
-  height:100vh;
+.pushContainer {
+  height: 100vh;
 }
+
 /*----------------- LINKS  ----------------------------------*/
-.btnLink{
+.btnLink {
   user-select: none;
   border-radius: 20px;
   border: 1px solid white;
   background-color: white;
-  height:50px;
+  height: 50px;
   width: 90%;
   font-family: monospace;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-decoration: none;
   color: black;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.btnLink:hover{
-  box-shadow:-10px 5px 2px midnightblue;
+
+.btnLink:hover {
+  box-shadow: -10px 5px 2px midnightblue;
   background-color: #cbe1f6;
 }
-.link{
-  margin:5%;
-  text-decoration:none;
+
+.link {
+  margin: 5%;
+  text-decoration: none;
   color: black;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 /*------------------------ Buttons  Menu ------------------------------------------------*/
 .menu {
-	border-radius: 20px;
-	width: 90%;
-	margin: 1%;
-	display: flex;
-	flex-direction: row;
-	background-color: #c6d2e3;
-  z-index:1;
+  border-radius: 20px;
+  width: 90%;
+  margin: 1%;
+  display: flex;
+  flex-direction: row;
+  background-color: #c6d2e3;
+  z-index: 1;
 }
-.exerciseButton{
+
+.exerciseButton {
   user-select: none;
   border-radius: 20px;
   border: 1px solid white;
   background-color: white;
-  height:50px;
-  width:90%;
-  margin:2%;
+  height: 50px;
+  width: 90%;
+  margin: 2%;
   font-size: 1rem;
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
-.menuButton{
+
+.menuButton {
   user-select: none;
   border-radius: 20px;
   border: 1px solid white;
   background-color: white;
-  height:50%;
-  width:20%;
-  padding:1%;
+  height: 50%;
+  width: 20%;
+  padding: 1%;
 }
-.toolbarButton{
+
+.toolbarButton {
   user-select: none;
   border-radius: 20px;
   border: 1px solid white;
   background-color: white;
-  margin:2%;
+  margin: 2%;
   font-size: 2rem;
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
-.exerciseLinkBtn{
+
+.exerciseLinkBtn {
   user-select: none;
-  text-decoration:none;
-  border-radius:15px;
-  color:black;
-  text-align:center;
+  text-decoration: none;
+  border-radius: 15px;
+  color: black;
+  text-align: center;
   background-color: white;
 }
-button:hover{
-  box-shadow:0px 2px 0px rgb(0, 0, 0);
+
+button:hover {
+  box-shadow: 0px 2px 0px rgb(0, 0, 0);
   background-color: rgb(253, 240, 248);
 }
-.menuItems{
-  width:50%;
-  display:flex;
+
+.menuItems {
+  width: 50%;
+  display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
-.menuItems>*{
-  margin:2%;
+
+.menuItems>* {
+  margin: 2%;
 }
+
 /* ------------------------------LOGOS  -----------------------------------*/
-.smLogo{
-  background-image:url("./Images/idiomLogo.png");
+.smLogo {
+  background-image: url("./Images/idiomLogo.png");
   height: 50px;
   width: 100px;
-  margin:2%;
+  margin: 2%;
 }
+
 /*///////////////////////  PAGES   //////////////////////////////////////*/
 /*Landing Page body*/
-.landingPage{
+.landingPage {
   background-image: url("./Images/idiomBackground2.png");
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  height:100vh;
+  height: 100vh;
 }
+
 .LandingPageMainContainer {
+  background-color: #fc3dbd;
   display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	width: 100%;
-	height: 75%;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 75%;
 }
+
 .LandingPageLargeLogo {
-  border:2px solid white;
-	display: flex;
-	height: 75%;
-  width:90%;
+  border: 2px solid white;
+  display: flex;
+  height: 75%;
+  width: 90%;
 }
-.homePage{
+
+.homePage {
   background-image: url("./Images/idiomBackground2.png");
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-}
-.loginFormPage{
-  background-image: url("./Images/idiomBackground2.png");
- 
-}
-.exercisePage{
-  background-image: url("./Images/idiomBackground2.png");
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-}
-/*////////////////////////////////////////////////////////////*/
-/*Login component*/
-input:focus{
-  outline:none;
-}
-input:invalid{
-  border: 7px dotted pink;
-}
-.LoginDisplay{
-  height:100vh;
-  width:100%;
-  background-color:#d860bac4;
   display: flex;
   flex-direction: column;
-  justify-content:center;
   align-items: center;
 }
-#loginContainer{
-  background-color: #4b2fa1;
-  border-radius: 20px;
-  box-shadow: -10px 10px 0px #31054c;
-  height:400px;
-  width: 45%;
-  margin:5%;
-  display:flex;
+
+.loginFormPage {
+  background-image: url("./Images/idiomBackground2.png");
+
+}
+
+.exercisePage {
+  background-image: url("./Images/idiomBackground2.png");
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*////////////////////////////////////////////////////////////*/
+/*Login component*/
+input:focus {
+  outline: none;
+}
+
+input:invalid {
+  border: 7px dotted pink;
+}
+
+.LoginDisplay {
+  height: 100vh;
+  width: 100%;
+  background-color: #d860bac4;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-#loginInputContainer{
-  height:22rem;
-  display:flex;
+
+#loginContainer {
+  background-color: #4b2fa1;
+  border-radius: 20px;
+  box-shadow: -10px 10px 0px #31054c;
+  height: 400px;
+  width: 45%;
+  margin: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#loginInputContainer {
+  height: 22rem;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
-.loginInput{
-  height:40px;
-  width:90%;
+
+.loginInput {
+  height: 40px;
+  width: 90%;
   border-radius: 10px;
-  border:none;
+  border: none;
   font-size: large;
 }
-#loginInputContainer > button:hover{
-  box-shadow:-10px 5px 2px midnightblue;
+
+#loginInputContainer>button:hover {
+  box-shadow: -10px 5px 2px midnightblue;
   background-color: #cbe1f6;
 }
 
 /*------------------ EXERCISES-------------------------*/
-.display{
+.display {
   border: 1px solid black;
-  background-color:rgba(255, 192, 203, 0.938);
-  margin:2%;
-  min-height:350px;
-  width:80%;
-  display:flex;
+  background-color: rgb(198 210 227);
+  margin: 2%;
+  min-height: 350px;
+  width: 80%;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.displayROW{
+
+.displayROW {
   border: 1px solid black;
-  background-color:rgba(255, 192, 203, 0.938);
+  background-color: rgb(198 210 227);
   margin: 2%;
-  min-height:350px;
-  width:80%;
-  display:flex;
+  min-height: 350px;
+  width: 80%;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
-.card{
+
+.card {
   border: 1px solid gray;
   box-shadow: -10px 10px 5px lightsteelblue;
   background-color: white;
-  min-height:275px;
-  width:40%;
-  margin:2%;
-  display:flex;
+  min-height: 275px;
+  width: 40%;
+  margin: 2%;
+  display: flex;
   justify-content: center;
   align-items: center;
-  transition:transform 0.8s;
+  transition: transform 0.8s;
 }
-.smallCard{
+
+.smallCard {
   border: 1px solid gray;
   box-shadow: -5px 5px 10px lightsteelblue;
   background-color: white;
-  height:10rem;
-  width:12rem;
-  margin:2%;
-  display:flex;
+  height: 7rem;
+  width: 75%;
+  display: flex;
   justify-content: center;
   align-items: center;
-  transition:transform 0.8s;
 }
+
 /*.flip properties being applied directly in JS function in FlipExercise Component*/
-.flip{
+.flip {
   transform: perspective(500px) rotateX(360deg);
 }
-.exerciseInput{
+
+.exerciseInput {
   width: 45%;
-  height:50px;
-  margin-top:2%;
-  border-top:none;
-  border-left:none;
-  border-right:none;
-  border-bottom:3px solid black;
-  border-radius:5px;
-  font-size:xx-large;
+  height: 50px;
+  margin-top: 2%;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 3px solid black;
+  border-radius: 5px;
+  font-size: xx-large;
 }
-.CardColumn{
-  margin:7%;
+
+.CardColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 48%;
 }
-.CardColumn>*{
-  margin:15%;
+
+.CardColumn>* {
+  margin: 3%;
 }
-.buttonBox{
-  display:flex;
+
+.buttonBox {
+  display: flex;
   flex-direction: row;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
-  width:80%;
-  margin:2%;
+  width: 80%;
+  margin: 2%;
 }
+
 /* ////////////////// HOMEPage components////////*/
-.toolbar{
-  display:flex;
+.toolbar {
+  display: flex;
   align-items: center;
-  justify-content:space-evenly;
-  flex-direction:row;
-  flex-wrap:nowrap;
-  width:50%;
+  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 50%;
 }
-.toolbarButtonContainer{
-  display:flex;
+
+.toolbarButtonContainer {
+  display: flex;
   align-items: center;
-  height:100%;
+  height: 100%;
 }
-.toolbarButtonContainer>*{
-  margin:3%;
-  padding:1%;
+
+.toolbarButtonContainer>* {
+  margin: 3%;
+  padding: 1%;
 }
-#label_list{
-  border-radius:5px;
+
+#label_list {
+  border-radius: 5px;
   background-color: rgb(123 147 180);
   color: #10066e;
-  display:flex;
+  display: flex;
   flex-direction: column;
-  align-items:flex-start;
-  padding:1%;
+  align-items: flex-start;
+  padding: 1%;
 }
-#label_list>*{
-  margin:5%;
+
+#label_list>* {
+  margin: 5%;
 }
+
 /*-----------------------  FOLDERS ----------------------*/
-.folder{
-  height:100px;
-  width:150px;
-  margin:3%;
-  display:flex;
+.folder {
+  height: 100px;
+  width: 150px;
+  margin: 3%;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.folder:hover{
+
+.folder:hover {
   box-shadow: 3px 3px 10px white;
 }
-.folderTop{
-  background-color: #c34545;
+
+.folderTop {
+  background-color: #8eb3e7;
   border-top-left-radius: 30px;
   border-top-right-radius: 5px;
-  height:25px;
-  padding:2%;
-  text-align:right;
+  height: 25px;
+  padding: 2%;
+  text-align: right;
   font-family: monospace;
-  color:white;
+  font-size: large;
+  color: black;
 }
-.folderBottom{
-  background-color: #d77676;
-  border-bottom-right-radius:5px;
-  border-bottom-left-radius:5px;
+
+.folderBottom {
+  background-color: #8eb3e7;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
   box-shadow: 5px -5px 0px white;
-  height:80px;
+  height: 80px;
 }
+
 /*-------------------------  SETS  ---------------------*/
-.set{
-  height:80px;
-  width:300px;
-  margin:3%;
+.set {
+  height: 80px;
+  width: 300px;
+  margin: 3%;
   border-radius: 15px;
   background-color: #6041f496;
   box-shadow: -10px 15px 0px darkslateblue;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color:whitesmoke;
+  color: whitesmoke;
   font-size: X-large;
 
 }
-.set:hover{
+
+.set:hover {
   box-shadow: -10px 15px 0px rgb(199, 196, 218);
 }
-.infoBox{
-  height:35px;
+
+.infoBox {
+  height: 35px;
   width: 250px;
 }
 
 /* ---------- MEDIA QUERIES -----------*/
 /* for screens smaller than 600px         */
-@media screen and (max-width:600px){
-  .menu{
-    flex-direction:column;
-    margin-top:5%;
+@media screen and (max-width:600px) {
+  .menu {
+    flex-direction: column;
+    margin-top: 5%;
 
   }
-  .menuItems{
-    width:100%;
-    display:flex;
+
+  .menuItems {
+    width: 100%;
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
   }
-  .menuItems>*{
-    height:3rem;
+
+  .menuItems>* {
+    height: 3rem;
   }
-  .toolbar{
-    flex-direction:column;
-    width:100%;
+
+  .toolbar {
+    flex-direction: column;
+    width: 100%;
   }
+
   /*LANIDNG PAGE ON MOBILE*/
-  .LandingPageMainContainer{
-    display:flex;
+  .LandingPageMainContainer {
+    background-color: #fc3dbd;
+    display: flex;
     flex-direction: column;
   }
-  #loginContainer{
-    width:65%;
-    display:flex;
+
+  #loginContainer {
+    width: 65%;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .LandingPageLargeLogo{
-    display:none;
+
+  .LandingPageLargeLogo {
+    display: none;
   }
+
   /*Exercise display*/
-  .display{
-    height:30rem;
+  .display {
+    height: 30rem;
     margin-top: 10%;
   }
-  .card{
-    width:90%;
+
+  .card {
+    width: 90%;
   }
-  .exerciseInput{
-    width:90%;
-    margin-top:15%;
+
+  .exerciseInput {
+    width: 90%;
+    margin-top: 15%;
   }
 }
