--- a/src/index.css
+++ b/src/index.css
@@ -111,38 +111,37 @@ button:hover {
 
 /* ------------------------------LOGOS  -----------------------------------*/
 .smLogo {
-  background-image: url("./Images/idiomLogo.png");
-  height: 50px;
+  /*background-image: url("./Images/idiomLogo.png")*/
+  /*background-image:url('./Images/cardDeck.svg');*/
   width: 100px;
-  margin: 2%;
+  margin:3%;
+
 }
 
 /*///////////////////////  PAGES   //////////////////////////////////////*/
 /*Landing Page body*/
 .landingPage {
-  background-image: url("./Images/idiomBackground2.png");
-  display: flex;
+  background-image: url("./Images/background.svg");
+  display:flex;
   flex-direction: column;
-  justify-content: flex-end;
-  height: 100vh;
+  justify-content: space-between;
 }
 
-.LandingPageMainContainer {
+.LandingPageSection {
   background-color: #fc3dbd;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 100%;
-  height: 75%;
+  margin-top: 5%;
+  margin-bottom: 25%;
 }
-
-.LandingPageLargeLogo {
-  border: 2px solid white;
-  display: flex;
-  height: 75%;
-  width: 90%;
+.landingSectionCopy{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width:15%;
 }
-
 .homePage {
   background-image: url("./Images/idiomBackground2.png");
   display: flex;
@@ -186,7 +185,7 @@ input:invalid {
   background-color: #4b2fa1;
   border-radius: 20px;
   box-shadow: -10px 10px 0px #31054c;
-  height: 400px;
+  height: 75%;
   width: 45%;
   margin: 5%;
   display: flex;
@@ -204,7 +203,7 @@ input:invalid {
 }
 
 .loginInput {
-  height: 40px;
+  height: 2rem;
   width: 90%;
   border-radius: 10px;
   border: none;
@@ -446,7 +445,7 @@ input:invalid {
   }
 
   /*LANIDNG PAGE ON MOBILE*/
-  .LandingPageMainContainer {
+  .LandingPageSection {
     background-color: #fc3dbd;
     display: flex;
     flex-direction: column;
